--- a/index.html
+++ b/index.html
@@ -6,87 +6,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gadget Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fontawesome.com/icons/categories/devices-hardware">
-    <link rel="stylesheet" href="https://fontawesome.com/search?o=r&c=devices-hardware">
-  
+    <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
 
 </head>
 <body>
     <div class="web">
-        <div class="nav-bar">
-            <nav>
-                <ul>
-                    <li><span class="h1">GAD</span><span class="h2">GET</span></li>
-                    <li>Today's Deal</li>
-                    <li>About Us</li>
-                    <li>Contact Us</li>
-                    <li>Products</li>
-                    <li><img src="shoping-removebg-preview.png" width="40px"></li>
-                    <button class="btn"><li>Sign Up</li></button>
-                </ul>
-            </nav>
-
+        <nav class="nav-bar">
+            <ul>
+                <li><a>Products</a></li>
+                <li><a>Today's Deal</a></li>
+                <li><a>About Us</a></li>
+                <li><a>Contact Us</a></li>
+            </ul>
+        </nav>
+        <div class="icons">
+            <i class="fa fa-shopping-basket" aria-hidden="true" id="iconic"></i>
+            <button class="user1">Sign Up</button>
         </div>
+        <h1 class="h1">GAD<span class="h2">GET</span></h1>
     </div>
-    <div class="H3">
-        <img class="img2" src="category-removebg-preview.png" width="100px">
-        <p class="pp">Category</p>
-        <img class="search" src="search.png" width="1%"><p>search</p>
+
+    <div class="nbar">
+        <button id="category"><i class="fa fa-th-large" aria-hidden="true"></i> |
+            Category</button>
+        <button id="search"><i class="fa fa-search" aria-hidden="true"></i>Search</button>
     </div>
      <div class="para">
-        <img class="gad" src="gadgets.avif">
+        <img class="gad" src="gadg (1).png">
         <p class="our">Your Trusted Gadgets<br>
         device partner<br></p>
     <p class="else">There are many variations of packages of Lorem Ipsum<br>
 available,but the majoirity have suffered alteration.</p>
 <button class="btn2">Order Now</button>
+<br>
 <p class="ex"> Explore More</p>
 
     </div>
     <div class="accessories">
-        <i class="fa-light fa-mobile-retro"></i>
-        <p>Mobile accessories</p>
-        <i class="fa-regular fa-gamepad-modern"></i>
-        <p>Game Devices</p>
-        <i class="fa-solid fa-speakers"></i>
-        <p>Audio accessories</p>
-        <i class="fa-light fa-tv"></i>
-        <p>Tv Displays</p>
-        <i class="fa-solid fa-usb-drive"></i>
-        <p>External Storage</p>
-        <i class="fa-light fa-laptop"></i>
-        <p>Laptop & Computer</p>
+      <img src="equips (1).png">
     </div>
-    <div class="section">
-        <p>Deal of the Day</p>
-        <p>Offer ends</p>
-        <p class="pn">12h:12m:12s</p>
-        <p>View all</p>
+    <div class="deals">
+        <h2 class="deal">Deal of the Day</h2>
+        <p class="offer">Offer Ends  <button id="button2"> 12h : 12m : 12s</button></p>
+        <p class="p">View All</p>
     </div>
-    <div class="images">
+
+    <div class="any">
+        <div id="products" >
+
+        </div>
+    </div>
+
+
+    <!-- <div class="images">
         <div class="items">
         <img src="watches.avif" width="260px">
         <p>Airdopes 648</p>
         <p>4.8 (1102 Review)</p>
-        <p>$28</p> <p class="i">ADD TO CART</p>
+        <p>$28</p> <p class="ye">ADD TO CART</p>
     </div>
     <div class="spe">
         <img src="g1.jpeg">
         <p>4.6 (845 Review)</p>
-        <p>$120</p><p>ADD TO CART</p>
+        <p>$120</p><p class="ye">ADD TO CART</p>
     </div>
     <div class="cc">
         <img src="cctvC.jpeg">
         <p>Security Camera Cctv</p>
         <p>3.9 (1548 review)</p>
-        <p>$150</p><p>ADD TO CART</p>
+        <p>$150</p><p class="ye">ADD TO CART</p>
 
     </div>
     <div class="air">
         <img src="airfresh.jpeg">
         <p>Auto Air Freshener</p>
         <p>4.8 (1102 Review)</p>
-        <p>$40</p><p>ADD TO CART</p>
+        <p>$40</p><p class="ye">ADD TO CART</p>
     </div>
     
     </div>
@@ -95,39 +92,104 @@ available,but the majoirity have suffered alteration.</p>
             <img src="drone.jpeg">
             <p>Quadrocopter Drone</p>
             <p>4.8(1102 Review)</p>
-            <p>$75</p><p>ADD TO CART</p>
+            <p>$75</p><p class="ye">ADD TO CART</p>
         </div>
         <div class="pro">
             <img src="pro.jpeg">
             <p>Procus PRO(Black)</p>
             <p>4.6 (845 Review)</p>
-            <p>$39</p><p>ADD TO CART</p>
+            <p>$39</p><p class="ye">ADD TO CART</p>
         </div>
         <div class="game">
             <img src="game-removebg-preview.png">
             <p>Gamepad AF6</p>
             <p>3.9 (1548 Review)</p>
-            <p>$150</p><p>ADD TO CART</p>
+            <p>$150</p><p class="ye">ADD TO CART</p>
         </div>
         <div class="logitech">
-            <img src="logitech-removebg-preview.png">
+            <img src="logitech-removebg-preview.png" height="180vh">
             <p>Logitech G502</p>
             <p>4.8(1102 Review)</p>
-            <p>$50</p><p>ADD TO CART</p>
+            <p>$50</p><p class="ye">ADD TO CART</p>
 
         </div>
-    </div>
-    <div class="products">
-        <img src="produ-removebg-preview.png">
-        <img src="camera.jpeg">
+    </div> -->
+    <div class="products1">
+        <img src="HDphones.jpg" width="1150px" height="50%">
+        <img src="camera.webp" width="1150px" height="80%">
     </div>
     <div class="p3">
         <p class="paj">Next level smart phone <br>
         controller on 70% Offer<br>
     Designed fror competitive gaming with microswitch<br>
-    buttons,analog triggers,and programmable macros</p><img src="imh.jpeg">
+    buttons,analog triggers,and programmable macros</p>
+    <img class="imgs" src="imh-removebg-preview.png">
     </div>
+    <div class="test">
+        <p class="lon">Testimonials</p>
+        <br>
+        <p class="amet">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint</p>
+    </div>
+    <div class="cod">
+        <p class="lko">Aliqua id fugiat nostud irure ex duis ea quis id quis id<br>
+        et.Sunt qui esse pariatur duis deserunt mollit dolore<br>
+    cillum minim tempor enim.Elit aute irure tempor<br>
+cupidatat incididunt sint deserent ut voluptate aute id<br>
+deserunt nisi.</p>
+<img class="opk" src="jadson.jpeg">
 
+    </div>
+    <div class="name3">
+        <p class="lp">Cameroon Williamson</p>
+        <p>Project head of Turbo Electrolight</p>
+
+    </div>
+    <div class="fot">
+        <p class="pa">Subscribe newsletter</p>
+        <p class="email">Email address</p>
+        <p class="cal"><i class="fa-solid fa-headphones"></i> Call us 24/7<br>(207)555-0119</p>
+    </div>
+    <div class="footer">
+        <div class="smarti">
+        <p class="pr">Smart <span class="gadk">Gadgets</span></p>
+        <br>
+        <p>6391 Elgin St.Celina,Delaware<br>
+    10299</p>
+    </div>
+    <div class="off">
+        <p>Corporate sales<br>
+        Feedback<br>
+    Jobs<br>
+Updates<br>
+Purchase Rules<br>
+For Partners</p>
+
+    </div>
+    <div class="foot3">
+        <p>Bonus program<br>
+        Smart Gadgets<br>
+    Bill Payment Verification<br>
+Offers<br>
+Delivery<br>
+Our locations</p>
+</div>
+<div class="foot4"> 
+    <p>How to place an order<br>
+    ways of payment<br>
+Exchange and return of goods<br>
+Warranty services<br>
+Order Tracking<br>
+Before you buy</p>
+
+</div>
+<div class="foot6">
+    <p>2030 company.All Rights Reserved.<br>
+    Privacy Policy<br>
+Terms & Conditions</p>
+</div>
+   
+    </div>
 </body>
 <script src="index.js"></script>
+
 </html>
